save user detail fix, active and deactive user accordion tables added